[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Ravindra Jaju <jaju@msync.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlx = ">=0.17.2"
torch = ">=2.4.1"
numpy = ">=2.1.1"
matplotlib = ">=3.9.2"
spacy = ">=3.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
